# griptape-flow

./: README.md  pyproject.toml
griptape/flow/artifacts/: __init__.py  error_output.py  text_output.py
griptape/flow/drivers/: __init__.py
griptape/flow/memory/: __init__.py  buffer_pipeline_memory.py  pipeline_memory.py  pipeline_run.py  summary_pipeline_memory.py
griptape/flow/rules/: __init__.py  json.py  meta.py
griptape/flow/schemas/: __init__.py  polymorphic_schema.py  rule_schema.py
griptape/flow/steps/: __init__.py  prompt_step.py  step.py  tool_substep.py  toolkit_step.py
griptape/flow/structures/: __init__.py  pipeline.py  structure.py  workflow.py
griptape/flow/summarizers/: __init__.py  prompt_driver_summarizer.py  summarizer.py
griptape/flow/tokenizers/: __init__.py  cohere_tokenizer.py  hugging_face_tokenizer.py  tiktoken_tokenizer.py  tokenizer.py
griptape/flow/utils/: __init__.py  cohere_tokenizer.py  conversation.py  j2.py  tiktoken_tokenizer.py
skatepark/drivers/: __init__.py
skatepark/drivers/prompt/: cohere_prompt_driver.py  openai_prompt_driver.py  prompt_driver.py
skatepark/schemas/: __init__.py
skatepark/schemas/drivers/: openai_prompt_driver_schema.py
skatepark/steps/: __init__.py  tool_substep.py  toolkit_step.py
skatepark/structures/: structure.py
skatepark/templates/prompts/: context.j2
skatepark/utils/: __init__.py  cohere_tokenizer.py  tiktoken_tokenizer.py
tests/mocks/: mock_driver.py  mock_failing_driver.py  mock_value_driver.py
tests/unit/drivers/: test_disk_memory_driver.py  test_prompt_driver.py
(+39 files in other folders)
